# swaflow

./: .dockerignore  .gitignore  README.md  docker-compose.yml  proyecto_saas_ia_comercial_multitenant.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py  management.py  models.py  realtime.py
backend/app/ai/: intent_classifier.py  models.py  operational.py  prompts.py  routes.py  runtime.py  schemas.py  service.py  tools.py
backend/app/appointments/: models.py  routes.py  schemas.py  service.py
backend/app/audit/: models.py  routes.py  schemas.py  service.py
backend/app/auth/: routes.py  schemas.py  service.py
backend/app/companies/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/contacts/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/conversations/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/core/: config.py  crypto.py  models.py  schemas.py  security.py  storage.py  tenant.py
backend/app/dashboard/: __init__.py  routes.py  schemas.py  service.py
backend/app/events/: __init__.py  dispatcher.py  models.py  routes.py  schemas.py  service.py
backend/app/funnels/: __init__.py  models.py  (+3 more)
backend/migrations/: env.py
backend/scripts/: import_products_from_excel.py  reset_contact_chat.py  stackcp_tunnel.sh
backend/tests/: conftest.py  test_dashboard_summary.py  test_inbox_realtime.py  test_superadmin_offboarding.py  test_tenant_and_orders.py  test_user_permissions.py  test_whatsapp_setup.py
(+192 files in other folders)
