[project]
name = "swaflow-backend"
version = "0.1.0"
description = "Backend MVP for a multi-tenant AI sales assistant over WhatsApp."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "bcrypt>=4.0,<4.1",
    "cryptography>=43.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.1",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
